force-app/main/default/objects/Sound_Card__c/Sound_Card__c.object-meta.xml
<CustomObject>
    <label>Sound Card</label>
    <nameField>
        <label>Sound Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sound Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>