force-app/main/default/objects/Sound_Card__c/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <label>Channels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>