force-app/main/default/objects/Sound_Card__c/fields/Connection_interface__c.field-meta.xml
<CustomField>
    <fullName>Connection_interface__c</fullName>
    <label>Connection interface</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCI</fullName>
            </value>
            <value>
                <fullName>PCIe</fullName>
            </value>
            <value>
                <fullName>USB 2.0</fullName>
            </value>
            <value>
                <fullName>mini-Jack (3.5 мм)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>